implementacao de edicao

--- a/src/app/pages/contas/contas.component.html
+++ b/src/app/pages/contas/contas.component.html
@@ -1,27 +1,27 @@
 <div class="row">
   <div class="col-12">
-    <h2 class="pb-2 border-bottom">Clientes</h2>
+    <h2 class="pb-2 border-bottom">Contas</h2>
   </div>
   <div class="col-12">
-    <a class="btn btn-sm btn-dark mb-3" routerLink="/clientes/cadastrar">Cadastrar</a>
+    <a class="btn btn-sm btn-dark mb-3">Cadastrar</a>
     <table class="table table-striped table-sm">
       <thead>
         <tr>
           <th scope="col">#</th>
-          <th scope="col">Nome</th>
-          <th scope="col">E-mail</th>
-          <th scope="col">Observações</th>
-          <th scope="col">Ativo</th>
+          <th scope="col">Agencia</th>
+          <th scope="col">Conta</th>
+          <th scope="col">Cliente</th>
+          <th scope="col">Saldo</th>
           <th scope="col">Ações</th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let cliente of clientes">
-          <td>{{ cliente.id }}</td>
-          <td>{{ cliente.nome }}</td>
-          <td>{{ cliente.email }}</td>
-          <td>{{ cliente.observacoes }}</td>
-          <td>{{ cliente.ativo ? 'Ativo' : 'Desativado' }}</td>
+        <tr *ngFor="let conta of contas">
+          <td>{{ conta.id }}</td>
+          <td>{{ conta.agencia }}</td>
+          <td>{{ conta.numero }}</td>
+          <td>{{ conta.cliente.nome }}</td>
+          <td>{{ conta.saldo }}</td>
           <td>
             <div class="dropdown">
               <button
@@ -33,7 +33,7 @@
                 Ações
               </button>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" routerLink="/clientes/editar/{{cliente.id}}">Editar</a></li>
+                <li><a class="dropdown-item" href="#">Editar</a></li>
                 <li><a class="dropdown-item" href="#">Excluir</a></li>
               </ul>
             </div>
