--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,7 +13,7 @@
           <a class="nav-link" routerLink="/clientes" routerLinkActive="active">Clientes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contas</a>
+          <a class="nav-link" routerLink="/contas" routerLinkActive="active">Contas</a>
         </li>
       </ul>
     </div>
